# chess-glicko-aws

./: .gitignore  Dockerfile  README.md  buildspec.yaml  deploy.sh  entrypoint.sh  requirements.txt  template.yaml
.github/workflows/: deploy.yml  manual-run.yml
asl/: FideScraperFlow.json
go/: go.mod  go.sum  main.go  tournament.go  tournament_list.go  util.go
python/: currentMonthFIDEGlicko.py  runGlicko.py
rust-src/: Cargo.toml
rust-src/src/: glicko.rs  process_calculations.rs  scrape_calculations.rs
src/: aggregate_player_ids.py  download_player_data.py  fide_scraper.py  process_calculations.py  process_fide_rating_list.py  scrape_calculations.py  tournament_scraper.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
