[package]
name = "calculation-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculation-scraper"
path = "src/scrape_calculations.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing
scraper = "0.18"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK - use compatible versions
aws-config = { version = "0.57", features = ["behavior-version-latest"] }
aws-sdk-s3 = "0.37"

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }