[package]
name = "calculation-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculation-scraper"
path = "src/scrape_calculations.rs"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }

# HTTP client
reqwest = { version = "0.11.22", features = ["json", "gzip"] }

# HTML parsing
scraper = "0.17"

# JSON serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# AWS SDK
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
aws-types = "1.0"


# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0.75"

# Async utilities
futures = "0.3.28"

# Regex
regex = "1.9"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }