[package]
name = "chess-rating-system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculation-scraper"
path = "src/scrape_calculations.rs"

[[bin]]
name = "calculation-processor"
path = "src/process_calculations.rs"

[[bin]]
name = "run-glicko"
path = "src/glicko.rs"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full", "fs"] }

# HTTP client
reqwest = { version = "0.11.22", features = ["json", "gzip"] }

# HTML parsing
scraper = "0.17"

# JSON serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# AWS SDK
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
aws-types = "1.0"

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0.75"

# Async utilities
futures = "0.3.28"

# Regex
regex = "1.9"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Compression
flate2 = "1.0"

# Hash functions
hashbrown = "0.14"

# SQLite support
rusqlite = { version = "0.30", features = ["bundled"] }

# Parallel processing
rayon = "1.7"

# Arrow/Parquet support
arrow = { version = "53.0", features = ["csv", "json"] }
parquet = { version = "53.0", features = ["arrow"] }

# Additional math utilities
libm = "0.2"